@@ -1300,13 +1300,16 @@ $_prefs['mailbox_start'] = array(
 
 // default sorting column
 $_prefs['sortby'] = array(
-    'value' => Horde_Imap_Client::SORT_ARRIVAL,
+    // Sort by sequence by default. It is the fastest sort as it is the only
+    // sort that can be done without parsing message headers. It sorts
+    // messages by the order they arrived within the mailbox.
+    'value' => Horde_Imap_Client::SORT_SEQUENCE,
     'locked' => false,
     'shared' => false,
     'type' => 'enum',
     'enum' => array(
-        Horde_Imap_Client::SORT_ARRIVAL => _("Arrival Time"),
-        Horde_Imap_Client::SORT_DATE => _("Message Date"),
+        Horde_Imap_Client::SORT_SEQUENCE => _("NONE"),
+        IMP::IMAP_SORT_DATE => _("Date"),
         Horde_Imap_Client::SORT_FROM => _("From Address"),
         Horde_Imap_Client::SORT_TO => _("To Address"),
         Horde_Imap_Client::SORT_SUBJECT => _("Subject"),
@@ -1334,6 +1337,23 @@ $_prefs['sortpref'] = array(
     'locked' => false,
     'shared' => false,
     'type' => 'implicit');
+
+// default sorting criteria for the date column
+$_prefs['sortdate'] = array(
+    // Use internal IMAP date by default - this is generally the date that a
+    // message was first received on the IMAP server and is maintained even
+    // if the message moves between mailboxes.
+    'value' => Horde_Imap_Client::SORT_ARRIVAL,
+    // Locked by default
+    'locked' => true,
+    'shared' => false,
+    'type' => 'enum',
+    'enum' => array(
+        Horde_Imap_Client::SORT_ARRIVAL => _("Arrival time on server"),
+        Horde_Imap_Client::SORT_DATE => _("Date in message headers")
+    ),
+    'desc' => _("Criteria to use when sorting by date:")
+);
 
 // mailbox constraints
 $_prefs['max_msgs'] = array(
