@@ -11,7 +11,7 @@
 <if:checkbox>
     <th></th>
 </if:checkbox>
-    <th><tag:hdr_arrival /></th>
+    <th></th>
     <th><tag:hdr_from /></th>
     <th><tag:hdr_subject /><if:hdr_subject_minor> <small>[<tag:hdr_subject_minor />]</small></if:hdr_subject_minor></th>
    </tr>
