@@ -2,6 +2,7 @@
 v5.0-git
 --------
 
+[mms] Simplified date sorting display (Ticket #8936).
 [mms] Properly redirect messages pursuant to RFC 5322 [3.6.6].
 [mms] Add redirect message capability to DIMP.
 [mms] Add ability to add attachments to composed messages for advanced mobile
